--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -248,11 +248,11 @@ nav:
                   - Basic Configuration: get-started/base-installation/self-managed/setup/basic-configuration.md
                   - Troubleshooting: get-started/base-installation/self-managed/setup/troubleshooting.md
               - Self Managed Access: get-started/base-installation/self-managed/self-managed-access.md
-              - Self Managed Discovery:
-                  - get-started/base-installation/self-managed/self-managed-discovery/index.md
-                  - Prerequisites: get-started/base-installation/self-managed/self-managed-discovery/prerequisites.md
-                  - Configuration: get-started/base-installation/self-managed/self-managed-discovery/configuration.md
-                  - Troubleshooting: get-started/base-installation/self-managed/self-managed-discovery/troubleshooting.md
+#              - Self Managed Discovery:
+#                  - get-started/base-installation/self-managed/self-managed-discovery/index.md
+#                  - Prerequisites: get-started/base-installation/self-managed/self-managed-discovery/prerequisites.md
+#                  - Configuration: get-started/base-installation/self-managed/self-managed-discovery/configuration.md
+#                  - Troubleshooting: get-started/base-installation/self-managed/self-managed-discovery/troubleshooting.md
               - Self Managed Encryption:
                   - get-started/base-installation/self-managed/self-managed-encryption/index.md
                   - Prerequisites: get-started/base-installation/self-managed/self-managed-encryption/prerequisites.md
@@ -263,10 +263,12 @@ nav:
                   - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane/prerequisites.md
                   - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane/configuration.md
                   - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane/troubleshooting.md
-              - PrivaceraCloud Data-plane Privacera Discovery:
+#              - PrivaceraCloud Data-plane Privacera Discovery:
+              - Privacera Discovery:
                   - get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/index.md
-                  - Prerequisites: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/prerequisites.md
-                  - Configuration: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/configuration.md
+                  - Discovery Prerequisites on AWS - Self Managed and Data Plane: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/discovery-prerequisites-aws-self-managed-data-plane.md
+                  - Discovery Prerequisites on AWS - PrivaceraCloud: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/discovery-prerequisites-aws-privaceracloud.md
+                  - Discovery Configuration - Self Managed and Data Plane: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/configuration.md
                   - Troubleshooting: get-started/base-installation/self-managed/privaceracloud-data-plane-discovery/troubleshooting.md
               - PrivaceraCloud Data-plane Privacera Encryption:
                   - get-started/base-installation/self-managed/privaceracloud-data-plane-encryption/index.md
